fixing text overflow

--- a/src/Landing.module.css
+++ b/src/Landing.module.css
@@ -35,6 +35,14 @@
   margin-bottom: 2rem;
 }
 
+/* Mobile Footer Adjustments */
+@media (max-width: 768px) {
+.heroTitle {
+  font-size: 2.5rem;
+
+}
+}
+
 .heroTitle span {
   background: linear-gradient(135deg, #fd7e14, #ff922b);
   color: #fff;
